# pastastore

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  connectors.md  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements.travis.txt  requirements.txt  setup.py  start_mongodb.bat  store_data.py
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/prompts/: code-review.prompt.md
.github/workflows/: ci.yml  python-publish.yml
arcticpastas/: __init__.py  arctic_pastas.py
dockerfiles/: docker-compose.yml  readme.md  run_docker.bat  run_mongodb_docker.bat  run_mongodb_windows.bat
docs/: conf.py  connectors.rst  examples.rst  getting_started.rst  index.rst  modules.rst  pstore.rst  user_guide.rst  utils.rst
docs/examples/: 001_PastaStore.nblink  001_guide_for_pastas-Project_users.nblink  001_introduction_to_pastastore.nblink  001_introduction_to_pastastore_databases.nblink  002_guide_for_pastas-Project_users.nblink  002_introduction_to_pastastore_databases.nblink  002_pastastore_plots_and_maps.nblink  003_pastastore_plots_and_maps.nblink  003_pastastore_yaml_interface.nblink  004_parallel_processing.nblink  004_pastastore_yaml_interface.nblink
docs/notebooks/: index.rst
examples/: ex01_pastas_and_arctic.ipynb  oseries_to_arctic.py  snippets.py  stresses_to_arctic.py
examples/notebooks/: ex01_PastaStore.ipynb  ex01_PastasProject.ipynb  ex01_intro+guide_for_pastas-Project_users.ipynb  ex01_introduction_to_pastastore.ipynb  ex01_introduction_to_pastastore_databases.ipynb  ex01_pastas_and_arctic.ipynb  ex02_guide_for_pastas-Project_users.ipynb  ex02_introduction_to_pastastore_databases.ipynb  ex02_pastas_and_pystore.ipynb  ex02_pastastore_plots_and_maps.ipynb  ex03_pastastore_plots_and_maps.ipynb  ex03_pastastore_yaml_interface.ipynb  ex04_parallel_processing.ipynb  ex04_pastastore_yaml_interface.ipynb  parallel_test_code.py
paper/: paper.bib  paper.md
pastas_projects/: __init__.py  arctic.py  base.py  connectors.py  project.py  pystore.py  util.py
pastastore/: __init__.py  base.py  connectors.py  datasets.py  plotting.py  store.py  styling.py  typing.py  util.py  validator.py  version.py  yaml_interface.py
pastastore/extensions/: __init__.py  accessor.py  hpd.py
tests/: conftest.py  pasconn.py  test_001.py  test_001_import.py  test_002_connectors.py  test_003_pastastore.py  test_004_benchmark.py  test_004_maps_plots.py  test_004_yaml.py  test_005_maps_plots.py  test_006_benchmark.py  test_007_hpdextension.py  test_008_stressmodels.py  test_009_parallel.py  test_arctic.py  test_connectors.py  test_pastastore.py  test_project.py  test_pystore.py
tests/data/: gw_obs.csv  well.csv  well_month_end.csv
